--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@ input[type=submit]:hover {
 <img src="{{url_for('static', filename='personalities.png')}}">
 <p>Enter the username of Twitter user</p>
 <form style="margin: auto; width: 220px;">
-    <input type="text" id="lname" name="lastname" placeholder="Username">
+    <input type="text" id="username" name="username" placeholder="Username">
     <input type="submit" value="Predict">
 </body>
 </html>
