--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -29,6 +29,6 @@ img {
 <body>
 <h1>Myers-Briggs Personality Type Prediction</h1>
 <img src="{{url_for('static', filename='prediction.png')}}">
-<p>{{username}} is {{predicted_type}} </p> 
+<p>@{{username}} is {{predicted_type}} </p> 
 </body>
 </html>
